[gd_scene load_steps=25 format=3 uid="uid://c8ipok1bqupwq"]

[ext_resource type="Script" uid="uid://ckdw6p8o85lvh" path="res://3d_test_scenes/test_table.gd" id="1_kq5jm"]
[ext_resource type="PackedScene" uid="uid://ixym0koepu6x" path="res://assets/LowPoly Environment Pack/Environment_1.fbx" id="2_i1pfp"]
[ext_resource type="Script" uid="uid://cnxo0i0um4um" path="res://addons/card_3d/scripts/drag_controller.gd" id="2_ue2r5"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="3_kq5jm"]
[ext_resource type="PackedScene" uid="uid://bjx4ugu14qx3w" path="res://example/face_card_3d.tscn" id="4_ue2r5"]
[ext_resource type="PackedScene" uid="uid://brxgffn8hy1j6" path="res://assets/LowPoly Environment Pack/Mounting_1.fbx" id="6_be3yt"]
[ext_resource type="PackedScene" uid="uid://s7l0fy6se46j" path="res://assets/LowPoly Environment Pack/Mounting_2.fbx" id="7_mthia"]
[ext_resource type="PackedScene" uid="uid://cpxvv3vli2rub" path="res://assets/LowPoly Environment Pack/Tree_3.fbx" id="8_loyd1"]
[ext_resource type="PackedScene" uid="uid://bd5mhvmcicbi0" path="res://assets/LowPoly Environment Pack/Tree_1.fbx" id="9_gbb10"]
[ext_resource type="PackedScene" uid="uid://bmqbndln18n2y" path="res://assets/LowPoly Environment Pack/Stone_1.fbx" id="10_o18s3"]
[ext_resource type="PackedScene" uid="uid://6s1nh8xa1kmm" path="res://assets/LowPoly Environment Pack/Plant_1.fbx" id="11_0npul"]
[ext_resource type="PackedScene" uid="uid://csqoc0qh4t7an" path="res://assets/LowPoly Environment Pack/Plant_2.fbx" id="12_lw02a"]
[ext_resource type="PackedScene" uid="uid://b2umbavydftbk" path="res://assets/LowPoly Environment Pack/Plant_3.fbx" id="13_tru24"]
[ext_resource type="PackedScene" uid="uid://rmo1dsk2jiiy" path="res://assets/LowPoly Environment Pack/Rock_1.fbx" id="14_rfo3q"]
[ext_resource type="PackedScene" uid="uid://cl14gi42gdkr1" path="res://assets/LowPoly Environment Pack/Rock_2.fbx" id="15_weoj1"]
[ext_resource type="PackedScene" uid="uid://dfl3vn5uilycr" path="res://assets/LowPoly Environment Pack/Log_3.fbx" id="16_uorig"]
[ext_resource type="PackedScene" uid="uid://dkxg0blmhy4db" path="res://assets/LowPoly Environment Pack/Log_2.fbx" id="17_id4oh"]
[ext_resource type="PackedScene" uid="uid://d1q3omiyho0nv" path="res://assets/LowPoly Environment Pack/Grass_2.fbx" id="18_0npul"]
[ext_resource type="PackedScene" uid="uid://8a2y4yadnf0" path="res://assets/LowPoly Environment Pack/Grass_1.fbx" id="19_tru24"]
[ext_resource type="PackedScene" uid="uid://bkovjd82qyibg" path="res://assets/LowPoly Environment Pack/Bush_1.fbx" id="20_rfo3q"]
[ext_resource type="Script" uid="uid://dqh27ah0coc1q" path="res://addons/card_3d/scripts/card_layouts/fan_card_layout.gd" id="20_weoj1"]
[ext_resource type="Script" uid="uid://bnrunt0o6rkyw" path="res://example_battle/scripts/play_card_dropzone.gd" id="21_weoj1"]

[sub_resource type="BoxMesh" id="BoxMesh_i1pfp"]
size = Vector3(2.5, 3.5, 0.2)

[sub_resource type="Resource" id="Resource_uorig"]
script = ExtResource("20_weoj1")

[node name="TestTable" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.896865, -0.442304, 0, 0.442304, 0.896865, 0, -5.06417, 7.03977)
shadow_enabled = true
shadow_opacity = 0.65
shadow_blur = 5.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.995031, -0.0995629, 0, 0.0995629, 0.995031, 0, -2.38032, 9.80727)
current = true
fov = 84.375

[node name="Table" type="Node3D" parent="."]
script = ExtResource("1_kq5jm")

[node name="TableSurface" parent="Table" instance=ExtResource("2_i1pfp")]
transform = Transform3D(2.35417, 0, 0, 0, -4.37114e-08, -1.48151, 0, 1, -6.47589e-08, 0, 0, -1.79916)

[node name="Mounting_1" parent="Table/TableSurface" instance=ExtResource("6_be3yt")]
transform = Transform3D(0.424778, 0, 0, 0, 1, 7.35137e-08, 0, -4.96208e-08, 0.674987, -7.84236, -1.90155, -5.28791)

[node name="Mounting_2" parent="Table/TableSurface" instance=ExtResource("7_mthia")]
transform = Transform3D(0.216899, 1.59646e-08, 0.365227, -3.75834e-08, 1, -2.13916e-08, -0.580359, -1.4439e-08, 0.34466, 9.36837, -0.967899, 4.65784)

[node name="Tree_3" parent="Table/TableSurface" instance=ExtResource("8_loyd1")]
transform = Transform3D(0.101112, 1.41886e-09, 0.0324596, -3.34023e-09, 0.25, -5.23007e-10, -0.0515795, -3.53022e-10, 0.160671, 6.08373, -0.359675, -0.233637)

[node name="Tree_1" parent="Table/TableSurface" instance=ExtResource("9_gbb10")]
transform = Transform3D(0.0771557, 3.18951e-09, 0.0729676, -7.50866e-09, 0.25, -2.98821e-09, -0.115948, -2.017e-09, 0.122603, 6.60382, -1.04087, 0.41804)

[node name="Tree_4" parent="Table/TableSurface" instance=ExtResource("8_loyd1")]
transform = Transform3D(-0.0391186, -4.31549e-09, -0.0987269, 1.01594e-08, 0.25, -1.49533e-08, 0.15688, -1.00933e-08, -0.0621609, 6.09851, -0.49937, 1.21825)

[node name="Stone_1" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.718572, -1.98104e-08, -0.45321, 4.66372e-08, 2, -1.34788e-08, 0.720166, -9.09798e-09, 1.14184, 5.96033, -0.294153, 0.857371)

[node name="Stone_4" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(1.39589, -2.65468, -0.880399, 5.28602, 3.88517, -3.33394, 2.64977, 6.90125e-08, 4.20126, -6.50752, -0.267056, -2.60375)

[node name="Stone_10" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(1.39589, -2.65468, -0.880399, 5.28602, 3.88517, -3.33394, 2.64977, 6.90125e-08, 4.20126, -6.1093, 0.198726, 6.54514)

[node name="Stone_11" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(1.25058, 0.685425, 2.78157, 5.28602, 3.88517, -3.33394, -2.82706, 4.07534, 0.266804, -6.90972, -0.174025, 6.54514)

[node name="Stone_12" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.276952, 0.151793, 0.616003, 1.17063, 0.860404, -0.738328, -0.626077, 0.902519, 0.0590859, -6.60421, 0.616606, 5.98015)

[node name="Stone_13" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.276952, 0.151793, 0.616003, 1.17063, 0.860404, -0.738328, -0.626077, 0.902519, 0.0590859, -2.33332, 0.150211, 5.99898)

[node name="Stone_14" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.276952, 0.151793, 0.616003, 1.17063, 0.860404, -0.738328, -0.626077, 0.902519, 0.0590859, 1.37733, 0.478049, -4.35994)

[node name="Stone_15" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.276952, 0.151793, 0.616003, 1.17063, 0.860404, -0.738328, -0.626077, 0.902519, 0.0590859, 1.51739, 0.452166, -4.35994)

[node name="Stone_16" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.276952, 0.151793, 0.616003, 1.17063, 0.860404, -0.738328, -0.626077, 0.902519, 0.0590859, 1.45972, 0.382297, -4.2524)

[node name="Stone_17" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(-0.0232276, -1.098, 2.51255, -5.97083, 2.26818, 0.936013, -1.65582, -3.68751, -1.62677, -4.07435, -0.450531, 1.3754)

[node name="Stone_18" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(-0.272986, 0.163043, -2.13647, -4.70334, 1.78669, 0.737316, 1.23042, 3.203, 0.0872178, -3.619, -0.450531, 1.3754)

[node name="Stone_19" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(-0.0799338, 0.640251, -2.06138, -4.70334, 1.78669, 0.737316, 1.29845, 3.04816, 0.896389, -4.0892, -0.315503, 1.72324)

[node name="Stone_20" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(-0.136428, 0.135524, -0.575147, -8.02746, 0.378196, 0.205719, 2.21614, 0.645216, 0.250102, -3.79277, -0.592801, 2.02303)

[node name="Stone_9" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.121964, -0.231949, -0.0769238, 0.461859, 0.339462, -0.291299, 0.231521, 6.02988e-09, 0.36708, -3.2421, 0.194699, -4.60506)

[node name="Stone_5" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(1.39589, -2.65468, -0.880399, 5.28602, 3.88517, -3.33394, 2.64977, 6.90125e-08, 4.20126, -6.27266, -0.606906, -3.03603)

[node name="Stone_6" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(-2.37147, -0.380969, 3.18307, -5.12043, 7.29755, -2.94144, -3.74226, -3.93967, -3.2596, -6.76519, -1.07789, -1.61379)

[node name="Stone_7" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(-1.17095, -0.18811, 1.57169, -2.5283, 3.60328, -1.45239, -1.8478, -1.94527, -1.60948, -6.56504, -0.486478, -1.73938)

[node name="Stone_8" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(1.24968, -0.18811, 1.50985, -2.00982, 3.60328, 2.11242, -2.00129, -1.94527, 1.41408, -6.65582, -0.477773, -1.60493)

[node name="Stone_2" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.170589, -3.14468e-08, -0.389019, 1.33084e-07, 1, -2.24773e-08, 0.618164, -7.61747e-08, 0.271072, 6.02623, -0.336137, 0.417685)

[node name="Stone_3" parent="Table/TableSurface" instance=ExtResource("10_o18s3")]
transform = Transform3D(0.170589, -3.14468e-08, -0.389019, 1.33084e-07, 1, -2.24773e-08, 0.618164, -7.61747e-08, 0.271072, 6.13978, -0.413424, 0.555069)

[node name="Plant_1" parent="Table/TableSurface" instance=ExtResource("11_0npul")]
transform = Transform3D(0.20516, 2.40158e-09, 0.0549417, -5.65372e-09, 0.5, -7.43928e-10, -0.0873042, -5.0214e-10, 0.326006, 5.75623, -0.276776, -0.257955)

[node name="Plant_2" parent="Table/TableSurface" instance=ExtResource("12_lw02a")]
transform = Transform3D(0.25146, 1.81552e-09, 0.0415342, -4.27404e-09, 0.6, -3.50603e-10, -0.0659993, -2.36652e-10, 0.399578, 5.49505, -0.0359416, 0.0501756)

[node name="Plant_3" parent="Table/TableSurface" instance=ExtResource("13_tru24")]
transform = Transform3D(0.424778, 0, 0, 0, 1, -3.55271e-15, 0, 1.77636e-15, 0.674987, 5.76971, 0.260855, 1.79765)

[node name="Rock_1" parent="Table/TableSurface" instance=ExtResource("14_rfo3q")]
transform = Transform3D(0.249936, 0.000689393, 0.343464, -3.5344e-08, 0.999998, -0.00200715, -0.545778, 0.000797133, 0.397156, -6.1793, -0.235394, -0.775004)

[node name="Rock_2" parent="Table/TableSurface" instance=ExtResource("15_weoj1")]
transform = Transform3D(0.194375, -0.0856, 0, -8.80859e-09, -2.0002e-08, 0.5, -0.136021, -0.308869, -1.47523e-08, -5.78409, -0.442633, -0.212635)

[node name="Log_3" parent="Table/TableSurface" instance=ExtResource("16_uorig")]
transform = Transform3D(0.288661, 1.36216e-08, 0.311627, -3.20677e-08, 1, -1.4007e-08, -0.495186, -9.45456e-09, 0.458692, -7.34196, 0.15083, -0.437051)

[node name="Log_4" parent="Table/TableSurface" instance=ExtResource("16_uorig")]
transform = Transform3D(0.302989, -1.30135e-08, -0.297715, 3.06361e-08, 1, -1.25326e-08, 0.473079, -8.45935e-09, 0.481459, -7.45685, -0.0171914, 0.488739)

[node name="Log_2" parent="Table/TableSurface" instance=ExtResource("17_id4oh")]
transform = Transform3D(0.0593679, -0.057345, 0.214015, -2.27999e-08, 0.5216, 0.139762, -0.352073, -0.0244164, 0.0911232, -6.76469, 0.0106786, -0.866829)

[node name="Log_5" parent="Table/TableSurface" instance=ExtResource("17_id4oh")]
transform = Transform3D(-0.139993, -0.047029, 0.175515, -1.84083e-08, 0.5216, 0.139762, -0.288737, 0.0575753, -0.214874, -6.61912, 0.0545582, -0.61732)

[node name="Grass_2" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.849556, 0, 0, 0, 2, -7.10543e-15, 0, 3.55271e-15, 1.34997, 1.41068, 0.222252, -1.99832)

[node name="Grass_3" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.849556, 0, 0, 0, 2, -7.10543e-15, 0, 3.55271e-15, 1.34997, -2.02046, 0.205173, -5.86635)

[node name="Grass_4" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.849556, 0, 0, 0, 2, -7.10543e-15, 0, 3.55271e-15, 1.34997, -1.76212, 0.205173, -5.86635)

[node name="Grass_5" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, -1.87224, 0.242595, -5.71054)

[node name="Grass_6" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, -1.89982, 0.242595, -5.99727)

[node name="Grass_7" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, 3.78222, 0.71958, -4.85124)

[node name="Grass_8" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, 0.0476964, 0.206243, 2.62611)

[node name="Grass_9" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, 3.58681, 0.206243, 6.48616)

[node name="Grass_10" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, -0.359669, -0.172515, 6.48616)

[node name="Grass_11" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, -6.91786, -0.0470695, 1.34462)

[node name="Grass_12" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(0.661105, 0, -0.533559, -7.10543e-15, 2, -7.10543e-15, 0.847844, 3.55271e-15, 1.05052, -7.12636, -0.127965, 1.8392)

[node name="Grass_13" parent="Table/TableSurface" instance=ExtResource("18_0npul")]
transform = Transform3D(-0.3764, -3.62399e-08, -0.761622, 2.34686e-08, 2, -1.06764e-07, 1.21024, -4.61297e-08, -0.598113, -7.17061, -0.153392, 1.53104)

[node name="Grass_1" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(0.424778, 0, 0, 0, 1, -3.55271e-15, 0, 1.77636e-15, 0.674987, -1.37231, 0.510972, -1.11211)

[node name="Grass_14" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(0.333929, -1.1476e-08, -0.262541, 2.70165e-08, 1, -9.3487e-09, 0.417186, -6.31025e-09, 0.530625, -1.26882, 0.510972, -1.11211)

[node name="Grass_15" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(0.333929, -1.1476e-08, -0.262541, 2.70165e-08, 1, -9.3487e-09, 0.417186, -6.31025e-09, 0.530625, -1.36777, -0.00302339, -1.11211)

[node name="Grass_16" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(-0.20367, 1.62941e-08, 0.372767, -3.83592e-08, 1, -6.46698e-08, -0.592339, -4.36513e-08, -0.323638, -0.240668, -0.00302339, -1.11211)

[node name="Grass_17" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(-0.20367, 1.62941e-08, 0.372767, -3.83592e-08, 1, -6.46698e-08, -0.592339, -4.36513e-08, -0.323638, 0.0603302, -0.345917, -0.665462)

[node name="Grass_18" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(-0.42194, 2.1428e-09, 0.0490216, -5.04452e-09, 1, -8.71307e-08, -0.077897, -5.88121e-08, -0.670477, -6.08059, -0.0134587, -0.219661)

[node name="Grass_19" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(-0.0630867, -1.83617e-08, -0.420067, 4.32266e-08, 1, -5.02033e-08, 0.667501, -3.38865e-08, -0.100247, -5.98527, -0.0283699, -0.384723)

[node name="Grass_20" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(-0.0630867, -1.83617e-08, -0.420067, 4.32266e-08, 1, -5.02033e-08, 0.667501, -3.38865e-08, -0.100247, -6.0008, 0.0638614, -0.171752)

[node name="Grass_21" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(-0.0630867, -1.83617e-08, -0.420067, 4.32266e-08, 1, -5.02033e-08, 0.667501, -3.38865e-08, -0.100247, -6.0008, 0.477602, 5.55355)

[node name="Grass_22" parent="Table/TableSurface" instance=ExtResource("19_tru24")]
transform = Transform3D(0.232245, 1.55467e-08, 0.355666, -3.65995e-08, 1, -1.98124e-08, -0.565166, -1.33731e-08, 0.369046, -6.10171, 0.328172, 5.68229)

[node name="Bush_1" parent="Table/TableSurface" instance=ExtResource("20_rfo3q")]
transform = Transform3D(0.113645, 0, 0, 0, 0.267539, -8.88178e-16, 0, 0, 0.180585, -6.07012, 0.655898, 5.98013)

[node name="Deck" parent="." instance=ExtResource("4_ue2r5")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 13.7942, 6.2962, -0.877604)
back_material_path = "res://3d_test_scenes/district_back_3d.tres"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Deck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.111376)
mesh = SubResource("BoxMesh_i1pfp")

[node name="Deck2" parent="." instance=ExtResource("4_ue2r5")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -10.7632, -7.66407, -0.716771)
rank = 14
suit = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Deck2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.111376)
mesh = SubResource("BoxMesh_i1pfp")

[node name="DragController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.97393)
script = ExtResource("2_ue2r5")
card_drag_plane = Plane(0, 0, 1, 4)

[node name="PlayZone" parent="DragController" instance=ExtResource("3_kq5jm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.309844)
script = ExtResource("21_weoj1")
play_enabled = true
highlight_on_hover = false

[node name="CardCollection3D" parent="DragController" instance=ExtResource("3_kq5jm")]
transform = Transform3D(1, 0, 0, 0, 0.988343, -0.152244, 0, 0.152244, 0.988343, 0, -6.10961, 0)
card_layout_strategy = SubResource("Resource_uorig")

[connection signal="card_3d_mouse_up" from="Deck" to="Table" method="_on_deck_card_3d_mouse_up"]
[connection signal="card_3d_mouse_up" from="Deck2" to="Table" method="_on_deck_card_3d_mouse_up"]
